# ghr

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh  task.md
.github/release-notes/: v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.7.1.md  v0.7.2.md  v0.7.3.md  v0.7.4.md  v0.7.5.md  v0.7.6.md  v0.7.7.md  v0.7.8.md  v0.8.0.md  v0.8.1.md  v0.8.2.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html  script.js  styles.css
packaging/homebrew/: README.md  update-formula.sh
packaging/homebrew/Formula/: ghr-cli.rb
src/: app.rs  config.rs  dirs.rs  gh_log.rs  github.rs  github_api.rs  github_gh.rs  github_queue.rs  log.rs  main.rs  model.rs  snapshot.rs  state.rs  theme.rs
src/app/: command_palette.rs  details.rs  dialogs.rs  diff.rs  drafts.rs  editor.rs  global_search.rs  images.rs  input.rs  keymap.rs  layout.rs  mentions.rs  participants.rs  pr_checkout.rs  render.rs  runtime.rs  search.rs  status.rs  switchers.rs  tasks.rs  tests.rs  text.rs
