[package]
name = "ghr-cli"
version = "0.1.3"
edition = "2024"
description = "A fast terminal dashboard for GitHub pull requests, issues, and notifications."
license = "MIT"
repository = "https://github.com/chenyukang/ghr"
homepage = "https://github.com/chenyukang/ghr"
readme = "README.md"
keywords = ["github", "tui", "cli", "dashboard"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ghr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
futures = "0.3"
open = "5"
pulldown-cmark = "0.12"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "1.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
