[package]
name = "ghr-cli"
version = "0.7.0"
edition = "2024"
description = "A fast terminal dashboard for GitHub pull requests, issues, and notifications."
license = "MIT"
repository = "https://github.com/chenyukang/ghr"
homepage = "https://github.com/chenyukang/ghr"
readme = "README.md"
keywords = ["github", "tui", "cli", "dashboard"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ghr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
futures = "0.3"
md5 = "0.7"
open = "5"
pulldown-cmark = "0.13"
ratatui = "0.30"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tui-textarea = { package = "tui-textarea-2", version = "0.11" }
unicode-width = "0.2"
